--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
+    "start": "nx run-many --parallel --target=serve --projects=app,api",
     "build": "nx build",
     "test": "nx test"
   },
@@ -12,31 +12,59 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nrwl/next": "14.1.5",
+    "core-js": "^3.6.5",
+    "next": "12.1.5",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-is": "18.1.0",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
+    "styled-components": "5.3.5",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "13.10.4",
+    "@nrwl/cypress": "14.1.5",
     "@nrwl/eslint-plugin-nx": "13.10.4",
     "@nrwl/jest": "13.10.4",
     "@nrwl/linter": "13.10.4",
     "@nrwl/nest": "13.10.4",
+    "@nrwl/next": "^14.1.5",
     "@nrwl/node": "13.10.4",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "14.1.5",
+    "@nrwl/web": "14.1.5",
     "@nrwl/workspace": "13.10.4",
+    "@testing-library/react": "13.1.1",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@types/react-is": "17.0.3",
+    "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "babel-jest": "27.5.1",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^9.1.0",
     "eslint": "~8.12.0",
+    "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.5.0",
     "jest": "27.2.3",
-    "nx": "13.10.4",
+    "nx": "14.1.5",
     "prettier": "^2.5.1",
+    "react-test-renderer": "18.1.0",
     "ts-jest": "27.0.5",
+    "ts-node": "9.1.1",
     "typescript": "~4.6.2"
   }
 }
