--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nrwl/next": "14.1.5",
+    "@prisma/client": "^3.14.0",
     "core-js": "^3.6.5",
     "next": "12.1.5",
+    "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
@@ -67,5 +69,9 @@
     "ts-jest": "27.0.5",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
+  },
+  "prisma": {
+    "schema": "apps/api/src/prisma/schema.prisma",
+    "seed": "ts-node apps/api/src/prisma/seed.ts"
   }
 }
