--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.5",
     "prisma": "^3.14.0",
     "react": "18.1.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-is": "18.1.0",
