--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.5",
+    "@nestjs/websockets": "^8.4.5",
     "@nrwl/next": "14.1.5",
     "@prisma/client": "^3.14.0",
     "core-js": "^3.6.5",
@@ -25,6 +27,7 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
+    "socket.io-client": "^4.5.0",
     "styled-components": "5.3.5",
     "tslib": "^2.0.0"
   },
@@ -53,7 +56,7 @@
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
-    "babel-plugin-styled-components": "1.10.7",
+    "babel-plugin-styled-components": "^1.10.7",
     "cypress": "^9.1.0",
     "eslint": "~8.12.0",
     "eslint-config-next": "12.1.5",
