--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@prisma/client": "^3.14.0",
     "core-js": "^3.6.5",
     "next": "12.1.5",
+    "next-pwa": "^5.5.2",
     "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
     "react-is": "18.1.0",
+    "react-nice-avatar": "^1.2.4",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
