--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.1.0",
+    "react-html5-camera-photo": "^1.5.5",
     "react-icons": "^4.3.1",
     "react-is": "18.1.0",
     "react-nice-avatar": "^1.2.4",
