--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "private": true,
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.4.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -27,6 +28,7 @@
     "react-icons": "^4.3.1",
     "react-is": "18.1.0",
     "react-nice-avatar": "^1.2.4",
+    "react-promise-tracker": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
