--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-DATABASE_URL="file:./data.db?connection_limit=1"
-API_HOST="http://192.168.1.70:3000/api"
-PORT=3000
+#DATABASE_URL="file:./data.db?connection_limit=1"
+DATABASE_URL="postgresql://root:transistore3@enzorosalinda.it:5432/wedding-staging"
+NX_API_HOST="http://192.168.1.70:3000"
+NX_PORT=3000
