--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nrwl/next": "14.1.5",
     "@prisma/client": "^3.14.0",
     "core-js": "^3.6.5",
+    "google-maps-react": "^2.0.6",
     "next": "12.1.5",
     "next-pwa": "^5.5.2",
     "prisma": "^3.14.0",
