--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-html5-camera-photo": "^1.5.5",
     "react-icons": "^4.3.1",
     "react-is": "18.1.0",
+    "react-modal": "^3.15.1",
     "react-nice-avatar": "^1.2.4",
     "react-promise-tracker": "^2.1.0",
     "reflect-metadata": "^0.1.13",
@@ -58,6 +59,7 @@
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "@types/react-is": "17.0.3",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "5.1.25",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
