--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-socket.io": "^8.4.5",
+    "@nestjs/serve-static": "^2.2.2",
     "@nestjs/websockets": "^8.4.5",
     "@nrwl/next": "14.1.5",
     "@prisma/client": "^3.14.0",
